--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,8 @@
 #sidebar-wrapper {
     z-index: 1;
     position: absolute;
-    width: 250px;
+    /* width: 250px; */
+    width: 16%;
     height: 100%;
     overflow-y: hidden;
     background: #2C3E50;
@@ -24,9 +25,10 @@
     /* width: 100%; */
     position: absolute;
     padding: 15px;
-    margin-left: 250px;
+    /* margin-left: 250px; */
+    margin-left: 16%;
     border: 2px solid green;
-    height: 100%;
+    
 }
 
 /* change the width of sidebar */
@@ -38,20 +40,15 @@
     
 }
 
- li {
-    text-indent: 20px;
+#sidebar-channel li {
+    text-indent: 5%;
     line-height: 40px;
-}
-
-ul {
-    list-style: none;
-    overflow: auto;
 }
 
 #create-channel {
     position: relative;
     margin-top: 15px;
-    margin-left: 52px;
+    margin-left: 5%;
     margin-right: 52px;
 }
 #new-channel-name {
@@ -67,4 +64,49 @@ ul {
 
 #create-channel-items {
     display: none;
+}
+
+#message {
+    width: 100%;
+}
+#page-content-wrapper {
+    width: 84%;
+    overflow: auto;
+}
+
+.other-message {
+    margin-bottom: 10px;
+    list-style-type: none;
+}
+.self-message {
+    text-align: right;
+    list-style-type: none;
+}
+.other-message .message {
+    position: static;
+    border: 1px solid black;
+    border-radius: 40px;
+    padding: 3px;
+    padding-left: 10px;
+    font-size: 20px;
+    width: 50%;
+}
+.self-message .message {
+    position: static;
+    border: 1px solid black;
+    border-radius: 40px;
+    padding: 3px;
+    padding-left: 10px;
+    font-size: 20px;
+    text-align: right;
+    margin-left:50%;
+
+}
+.timestamp {
+    position: relative;
+    font-size: 10px;
+}
+
+.sent_by {
+    text-transform: capitalize;
 }
