--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,28 @@
             {{/each}}
         {%- endraw %}
     </script>
+    <script type="text/template" id="other-message-template">
+        <li class="other-message">
+            {% raw -%}
+            <div class='sent_by'>{{this.sent_by}}</div>
+            <div class='message'>{{this.text}}</div>
+            <div class='timestamp'>{{this.timestamp}}</div> 
+            {%- endraw %}
+        </li>
+    </script>
+    <script type="text/template" id="self-message-template">
+        <li class="self-message">
+            {% raw -%}
+            <div class='sent_by'>{{this.sent_by}}</div>
+            <div class='message'>{{this.text}}</div>
+            <div class='timestamp'>{{this.timestamp}}</div> 
+            {%- endraw %}
+        </li>
+    </script>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script src="{{url_for('static', filename='script.js')}}"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
 <body>
@@ -68,10 +87,16 @@
 
             <div id="page-content-wrapper">
                 <div class="container-fluid">
-                    <button id="sidebar-button"> button </button>
-                    <p>
-                        somebody once told me the world was gonna roll me i ain't the sharpest tool in the shed
-                    </p>
+                    <div id="messages">
+                        <ul id='messages-list'>
+
+                        </ul>
+                    </div>
+                    <form class="form-group">
+                        <input type="text" id="message" class="form-control">
+                        <button id="send-message">Send</button>
+                    </form>
+
                 </div>
             </div>
         </div>
